5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1613_2425.log
== TEST (2019-03-29 12:03:40) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)"km/l")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:04:20) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str.km/l (round(cm, 3))
-- ERROR:
File "XXXX", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:04:30) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)) 
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:04:52) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)str."km/l") 
-- ERROR:
File "XXXX", line 4
    print(round(cm, 3)str."km/l") 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:09) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print("km/l"(round(cm, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("km/l"(round(cm, 3)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:22) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print("km/l"(round(cm, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("km/l"(round(cm, 3)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:26) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str."km/l"(round(cm, 3)))
-- ERROR:
File "XXXX", line 4
    print(str."km/l"(round(cm, 3)))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:29) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str."km/l"(round(cm, 3)))
-- ERROR:
File "XXXX", line 4
    print(str."km/l"(round(cm, 3)))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:35) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str.km/l(round(cm, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str.km/l(round(cm, 3)))
AttributeError: type object 'str' has no attribute 'km'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:05:41) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str.km/l(round(cm, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str.km/l(round(cm, 3)))
AttributeError: type object 'str' has no attribute 'km'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:09:51) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm "km/l", 3))
-- ERROR:
File "XXXX", line 4
    print(round(cm "km/l", 3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:10:14) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:10:21) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:12:46) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
print(km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:12:53) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
print(km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:13:12) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm "km/l", 3))

-- ERROR:
File "XXXX", line 4
    print(round(cm "km/l", 3))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:13:52) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + "km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:14:15) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str(round(cm, 3) + "km/l")

-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:14:26) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(str(round(cm, 3) + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(round(cm, 3) + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:14:40) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:14:44) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:15:12) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + 'km/l')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + 'km/l')
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:15:21) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + 'km/l')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + 'km/l')
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:20:20) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:20:41) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:21:52) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:24:21) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print((round(cm, 3)) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((round(cm, 3)) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:26:24) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:26:28) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:26:32) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:10) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:16) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:26) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:34) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 2))
-- OUTPUT:
14.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:41) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 2))
-- OUTPUT:
14.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:47) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:27:53) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- EXECUTION TIME:
0.127981
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:27:53) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:17:24) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm + "km/l", 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm + "km/l", 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:17:45) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:22) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:18:36) 
-- CODE:
d = float(input("digite d: "))
cg = float(input("digite cg: "))
cm = d/cg
print(round(cm, 3))
print("km/l")
-- EXECUTION TIME:
0.125819
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
